feat: applied suggestions, pimped tx table

--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -70,7 +70,7 @@
   "answer": "Resposta",
   "answers": "Respostes",
   "application": "Aplicació",
-  "arbitrary_message": "Missatge arbitrari",
+  "arbitrary_message": "Missatge",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Demana una comanda",
   "ask_order_cancellation": "Demanar la Cancel·lació de l'Ordre",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ no és vàlid.",
   "error_invalid_input": "Entrada no vàlida.",
   "error_invalid_input_numbers": "Entrada no vàlida. Només s'accepten números i un punt.",
-  "error_invalid_ordinary_payment": "Pagament ordinàri no és vàlid.",
+  "error_invalid_ordinary_payment": "Pagament no vàlid.",
   "error_invalid_referenced_transaction_hash": "Hash de transacció de referència no és vàlid.",
   "error_invalid_seller": "La ID de venedor no és vàlida",
   "error_invalid_token": "El Token no és vàlid. Sembla que pertany al compte __account_link__. Generat en __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Mínim Nº d'Opcions",
   "more_info": "Més informació",
   "multi_out_payment": "Pagament de sortida múltiple",
-  "multi_out_same_payment": "Pagament de la mateixa quantitat de distribució múltiple",
   "multiple_assets_differences": "Diversos actius han estat venuts i/o comprats.",
   "my_assets": "Els Meus actius",
   "my_completed_orders": "Les Meves Ordres Completades",
@@ -696,7 +695,7 @@
   "order_description": "Descripció de l'Ordre",
   "order_status": "Estat l'Ordre",
   "order_total": "Total de la Ordre",
-  "ordinary_payment": "Pagament Ordinari",
+  "ordinary_payment": "Pagament",
   "other": "Altre",
   "page_header": "Encapçalement de pàgina",
   "parse_transaction": "Analitzar la Transacció",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Bytes de la Transacció Firmada",
   "smart_contract": "Contracte intel·ligent",
   "smart_contract_creation": "Creació de contractes intel·ligents",
-  "smart_contract_payment": "Pagament del contracte intel·ligent",
+  "smart_contract_payment": "Pagament del contracte",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Corba suau",
   "spend_all": "Passi tot",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Estableix el compromís",
   "add_commitment": "Afegeix compromís",
   "revoke_commitment": "Revocar el compromís",
-  "reward_recipient_assignment": "Recompensa d'assignació del destinatari",
+  "reward_recipient_assignment": "Assignació de recompenses",
   "mining": "Mineria",
   "applied_commitment": "Compromís aplicat",
   "toggle_commitment_mode": "Canvieu aquí entre afegir i revocar el compromís de mineria",
@@ -1057,5 +1056,7 @@
   "selected_node": "Node seleccionat actualment",
   "toggle_nodeselection_mode": "Alterna per canviar entre la selecció manual o automàtica de nodes",
   "commitment_zero_balance": "Encara no teniu cap compromís afegit",
-  "network": "Xarxa"
+  "network": "Xarxa",
+  "multiple_recipients": "Destinataris múltiples",
+  "self": "jo"
 }
