--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -70,7 +70,7 @@
   "answer": "Odpověď",
   "answers": "Odpovědi",
   "application": "Aplikace",
-  "arbitrary_message": "Libovolná zpráva",
+  "arbitrary_message": "Zpráva",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Požádat o objednávku",
   "ask_order_cancellation": "Požádat o zrušení objednávky",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Nejmenší počet voleb",
   "more_info": "Více informací",
   "multi_out_payment": "Multi Out Platba",
-  "multi_out_same_payment": "Multi Out Stejná částka Platba",
   "multiple_assets_differences": "Nekolik různých aktiv bylo prodáno anebo koupeno.",
   "my_assets": "Má aktiva",
   "my_completed_orders": "Mé dokončené objednávky",
@@ -696,7 +695,7 @@
   "order_description": "Popis objednávky",
   "order_status": "Stav objednávky",
   "order_total": "Objednávka celkem",
-  "ordinary_payment": "Obyčejná platba",
+  "ordinary_payment": "Způsob platby",
   "other": "Jiný",
   "page_header": "Záhlaví stránky",
   "parse_transaction": "Analyzovat transakci",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Počet bajtů podepsané transakce",
   "smart_contract": "Inteligentní smlouva",
   "smart_contract_creation": "Vytvoření inteligentní smlouvy",
-  "smart_contract_payment": "Platba inteligentní smlouvy",
+  "smart_contract_payment": "Platba smlouvy",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Hladká křivka",
   "spend_all": "Strávit všechno",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Stanovit závazek",
   "add_commitment": "Přidat závazek",
   "revoke_commitment": "Odvolat závazek",
-  "reward_recipient_assignment": "Odměna za přiřazení příjemce",
+  "reward_recipient_assignment": "Přiřazení odměn",
   "mining": "Hornictví",
   "applied_commitment": "Použitý závazek",
   "toggle_commitment_mode": "Zde přepínejte mezi přidáním a odvoláním závazku těžby",
@@ -1057,5 +1056,7 @@
   "selected_node": "Aktuálně vybraný uzel",
   "toggle_nodeselection_mode": "Přepnutím přepínáte mezi ručním nebo automatickým výběrem uzlu",
   "commitment_zero_balance": "Zatím nemáte přidán žádný závazek",
-  "network": "Síť"
+  "network": "Síť",
+  "multiple_recipients": "Více příjemců",
+  "self": "já"
 }
