--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -70,7 +70,7 @@
   "answer": "Antwort",
   "answers": "Antworten",
   "application": "Anwendung",
-  "arbitrary_message": "Beliebige Nachricht",
+  "arbitrary_message": "Nachricht",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Bestellung erfragen",
   "ask_order_cancellation": "Verkaufsorder stornieren",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Mindestanzahl an Auswahlmöglichkeiten",
   "more_info": "Weitere Infos",
   "multi_out_payment": "Multi Out Zahlung",
-  "multi_out_same_payment": "Multi Out gleicher Betrag",
   "multiple_assets_differences": "Mehrere verschiedene Assets wurden verkauft und/oder gekauft.",
   "my_assets": "Meine Assets",
   "my_completed_orders": "Abgeschlossene Bestellungen",
@@ -696,7 +695,7 @@
   "order_description": "Orderbeschreibung",
   "order_status": "Orderstatus",
   "order_total": "Auftragssumme",
-  "ordinary_payment": "Normale Zahlung",
+  "ordinary_payment": "Zahlung",
   "other": "Andere",
   "page_header": "Seitenkopf",
   "parse_transaction": "Transaktion parsen",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Signierte Transaktionsbytes",
   "smart_contract": "Smart Contract",
   "smart_contract_creation": "Smart Contract Erstellung",
-  "smart_contract_payment": "Bezahlung von Smart Contract",
+  "smart_contract_payment": "Vertragszahlung",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Glatte Kurve",
   "spend_all": "Alles ausgeben",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Einsatz festlegen",
   "add_commitment": "Einsatz hinzufügen",
   "revoke_commitment": "Einsatz widerrufen",
-  "reward_recipient_assignment": "Belohnungsempfängerzuweisung",
+  "reward_recipient_assignment": "Belohnungszuweisung",
   "mining": "Mining",
   "applied_commitment": "Angewandter Einsatz",
   "toggle_commitment_mode": "Wechseln Sie hier zwischen dem Hinzufügen und Widerrufen des Mining-Einsatzes",
@@ -1057,5 +1056,7 @@
   "selected_node": "Derzeit ausgewählter Knoten",
   "toggle_nodeselection_mode": "Schalten Sie um, um zwischen manueller oder automatischer Knotenauswahl zu wechseln",
   "commitment_zero_balance": "Sie haben noch keinen Einsatz hinzugefügt",
-  "network": "Netzwerk"
+  "network": "Netzwerk",
+  "multiple_recipients": "Mehrere Empfänger",
+  "self": "selbst"
 }
