--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -70,7 +70,7 @@
   "answer": "Answer",
   "answers": "Answers",
   "application": "Application",
-  "arbitrary_message": "Arbitrary Message",
+  "arbitrary_message": "Message",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ask Order",
   "ask_order_cancellation": "Ask Order Cancellation",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ is invalid.",
   "error_invalid_input": "Invalid input.",
   "error_invalid_input_numbers": "Invalid input. Only numbers and a dot are accepted.",
-  "error_invalid_ordinary_payment": "Invalid ordinary payment.",
+  "error_invalid_ordinary_payment": "Invalid payment.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "Invalid Seller ID",
   "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
@@ -608,8 +608,7 @@
   "minimum_fee": "Minimum",
   "minimum_nr_choices": "Minimum Nr Of Choices",
   "more_info": "More Info",
-  "multi_out_payment": "Multi Out Payment",
-  "multi_out_same_payment": "Multi Out Same Amount Payment",
+  "multi_out_payment": "Payments",
   "multiple_assets_differences": "Multiple different assets have been sold and/or bought.",
   "my_assets": "My Assets",
   "my_completed_orders": "My Completed Orders",
@@ -707,7 +706,7 @@
   "order_description": "Order Description",
   "order_status": "Order Status",
   "order_total": "Order Total",
-  "ordinary_payment": "Ordinary Payment",
+  "ordinary_payment": "Payment",
   "other": "Other",
   "page_header": "Page Header",
   "parse_transaction": "Parse Transaction",
@@ -863,7 +862,7 @@
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Smart Contract",
   "smart_contract_creation": "Smart Contract Creation",
-  "smart_contract_payment": "Payment of Smart Contract",
+  "smart_contract_payment": "Contract Payment",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Smooth Curve",
   "spend_all": "Spend all",
@@ -1051,7 +1050,7 @@
   "set_commitment": "Set Commitment",
   "add_commitment": "Add Commitment",
   "revoke_commitment": "Revoke Commitment",
-  "reward_recipient_assignment": "Reward Recipient Assignment",
+  "reward_recipient_assignment": "Reward Assignment",
   "mining": "Mining",
   "applied_commitment": "Applied Commitment",
   "toggle_commitment_mode": "Toggle here between adding and revoking the mining commitment",
@@ -1069,5 +1068,7 @@
   "node_successfully_connected": "Successfully connected to the node",
   "selected_node": "Currently selected node",
   "toggle_nodeselection_mode": "Toggle to switch between manual or automatic node selection",
-  "commitment_zero_balance": "You have no commitment added yet"
+  "commitment_zero_balance": "You have no commitment added yet",
+  "multiple_recipients": "Multiple Recipients",
+  "self": "self"
 }
