--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -70,7 +70,7 @@
   "answer": "Resposta",
   "answers": "Resposta",
   "application": "Aplicación",
-  "arbitrary_message": "Mensaxe arbitrario",
+  "arbitrary_message": "Mensaxe",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Pregunta por orde",
   "ask_order_cancellation": "Cancelar Orde de Venda",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ é invalido.",
   "error_invalid_input": "Entrada non válida.",
   "error_invalid_input_numbers": "Entrada non válida. Só se aceptan números e un punto.",
-  "error_invalid_ordinary_payment": "Invalid ordinary payment.",
+  "error_invalid_ordinary_payment": "Pago non válido.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "ID de vendedor non é válida",
   "error_invalid_token": "O identificador é INVÁLIDO. Parece pertencer á conta __account_link__. Foi xerado no __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Mínimo Nº de Opcións",
   "more_info": "Máis Info",
   "multi_out_payment": "Pagamento multitáctil",
-  "multi_out_same_payment": "Múltiples cantidade de pago",
   "multiple_assets_differences": "Diferentes activos foron vendidos e/ou comprados.",
   "my_assets": "Os meus activos",
   "my_completed_orders": "As miñas ordes completadas",
@@ -696,7 +695,7 @@
   "order_description": "Descripción da orde",
   "order_status": "Estado da orde",
   "order_total": "Order Total",
-  "ordinary_payment": "Pago ordinario",
+  "ordinary_payment": "Pagamento",
   "other": "Outros",
   "page_header": "Encabezado da páxina",
   "parse_transaction": "Transacción analizada",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Bytes da transacción firmada",
   "smart_contract": "Contrato intelixente",
   "smart_contract_creation": "Creación de contratos intelixentes",
-  "smart_contract_payment": "Pago de contrato intelixente",
+  "smart_contract_payment": "Pagamento do contrato",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Curva suave",
   "spend_all": "Pase todo",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Establecer compromiso",
   "add_commitment": "Engadir compromiso",
   "revoke_commitment": "Revocar o compromiso",
-  "reward_recipient_assignment": "Recompensa do destinatario",
+  "reward_recipient_assignment": "Asignación de recompensas",
   "mining": "Minaría",
   "applied_commitment": "Compromiso aplicado",
   "toggle_commitment_mode": "Alternar entre engadir e revogar o compromiso mineiro",
@@ -1057,5 +1056,7 @@
   "selected_node": "Nodo seleccionado actualmente",
   "toggle_nodeselection_mode": "Alternar para cambiar entre a selección de nodos manual ou automática",
   "commitment_zero_balance": "Aínda non engadiches ningún compromiso",
-  "network": "Rede"
+  "network": "Rede",
+  "multiple_recipients": "Varios destinatarios",
+  "self": "eu"
 }
