--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -70,7 +70,7 @@
   "answer": "उत्तर",
   "answers": "जवाब",
   "application": "एप्लिकेशन",
-  "arbitrary_message": "Arbitrary Message",
+  "arbitrary_message": "संदेश",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "आदेश पूछें",
   "ask_order_cancellation": "ऑर्डर रद्दीकरण से पूछो",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ अमान्य है।",
   "error_invalid_input": "अमान्य इनपुट।",
   "error_invalid_input_numbers": "अमान्य इनपुट। केवल नंबर और एक डॉट स्वीकार किए जाते हैं।",
-  "error_invalid_ordinary_payment": "अमान्य साधारण भुगतान।",
+  "error_invalid_ordinary_payment": "अमान्य भुगतान।",
   "error_invalid_referenced_transaction_hash": "अमान्य संदर्भित लेनदेन हैश।",
   "error_invalid_seller": "अमान्य विक्रेता ID",
   "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "न्यूनतम पसंदें",
   "more_info": "अधिक जानकारी",
   "multi_out_payment": "मल्टी आउट भुगतान",
-  "multi_out_same_payment": "मल्टी आउट एक ही राशि का भुगतान",
   "multiple_assets_differences": "एकाधिक अलग सम्पत्तियां बेची खरीदी गई हैं।",
   "my_assets": "मेरी संपत्तिआं",
   "my_completed_orders": "मेरे पूर्ण आदेश",
@@ -696,7 +695,7 @@
   "order_description": "ऑर्डर विवरण",
   "order_status": "आदेश स्थिति",
   "order_total": "Order Total",
-  "ordinary_payment": "साधारण भुगतान",
+  "ordinary_payment": "भुगतान",
   "other": "अन्य",
   "page_header": "Page Header",
   "parse_transaction": "लेन-देन को पार्स",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "हस्ताक्षरित लेनदेन बाइट्स",
   "smart_contract": "स्मार्ट कॉन्ट्रैक्ट",
   "smart_contract_creation": "स्मार्ट कॉन्ट्रैक्ट क्रिएशन",
-  "smart_contract_payment": "स्मार्ट अनुबंध का भुगतान",
+  "smart_contract_payment": "अनुबंध भुगतान",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "चिकनी वक्र",
   "spend_all": "सब कुछ खर्च करते हैं",
@@ -1038,7 +1037,7 @@
   "set_commitment": "कमिटमेंट सेट करें",
   "add_commitment": "प्रतिबद्धता जोड़ें",
   "revoke_commitment": "रेवोक कमिटमेंट",
-  "reward_recipient_assignment": "इनाम प्राप्तकर्ता असाइनमेंट",
+  "reward_recipient_assignment": "इनाम सौंपना",
   "mining": "खुदाई",
   "applied_commitment": "लागू की गई प्रतिबद्धता",
   "toggle_commitment_mode": "खनन प्रतिबद्धता को जोड़ने और रद्द करने के बीच यहां टॉगल करें",
@@ -1057,5 +1056,7 @@
   "selected_node": "वर्तमान में चयनित नोड",
   "toggle_nodeselection_mode": "मैन्युअल या स्वचालित नोड चयन के बीच स्विच करने के लिए टॉगल करें",
   "commitment_zero_balance": "आपकी अभी तक कोई प्रतिबद्धता नहीं है",
-  "network": "नेटवर्क"
+  "network": "नेटवर्क",
+  "multiple_recipients": "एकाधिक प्राप्तकर्ता",
+  "self": "स्वयं"
 }
