--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -70,7 +70,7 @@
   "answer": "Jawaban",
   "answers": "Jawaban",
   "application": "Aplikasi",
-  "arbitrary_message": "Semaunya pesan",
+  "arbitrary_message": "Pesan",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Tanyakan Order",
   "ask_order_cancellation": "Meminta pembatalan pesanan",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ tidak sah.",
   "error_invalid_input": "Masukan tidak valid.",
   "error_invalid_input_numbers": "Valid masukan. Hanya angka dan dot titik diterima.",
-  "error_invalid_ordinary_payment": "Pembayaran umum tidak sah.",
+  "error_invalid_ordinary_payment": "Pembayaran tidak valid.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "ID Penjual tidak valid",
   "error_invalid_token": "Token ini TIDAK BERLAKU. Ini milik account__account_link__ akun. Dibuat pada __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Jumlah Minimum Of Pilihan",
   "more_info": "Informasi Selengkapnya",
   "multi_out_payment": "Pembayaran Multi Out",
-  "multi_out_same_payment": "Pembayaran Jumlah Yang Sama Banyaknya",
   "multiple_assets_differences": "Beberapa aset yang berbeda telah dijual dan/atau dibeli.",
   "my_assets": "Aset saya",
   "my_completed_orders": "Saya Menyelesaikan Pesanan",
@@ -696,7 +695,7 @@
   "order_description": "Deskripsi Urutan",
   "order_status": "Status Pemesanan",
   "order_total": "Total Order",
-  "ordinary_payment": "Pembayaran biasa",
+  "ordinary_payment": "Pembayaran",
   "other": "Lainnya",
   "page_header": "Titel Pagina",
   "parse_transaction": "Uraikan Transaksi",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Byte ditandatangani transaksi",
   "smart_contract": "Kontrak Cerdas",
   "smart_contract_creation": "Penciptaan Kontrak Cerdas",
-  "smart_contract_payment": "Pembayaran Kontrak Cerdas",
+  "smart_contract_payment": "Pembayaran Kontrak",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Kurva halus",
   "spend_all": "Habiskan semuanya",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Tetapkan Komitmen",
   "add_commitment": "Tambahkan Komitmen",
   "revoke_commitment": "Cabut Komitmen",
-  "reward_recipient_assignment": "Tugas Penerima Hadiah",
+  "reward_recipient_assignment": "Penugasan Hadiah",
   "mining": "Pertambangan",
   "applied_commitment": "Komitmen yang Diterapkan",
   "toggle_commitment_mode": "Alihkan di sini antara menambah dan mencabut komitmen pertambangan",
@@ -1057,5 +1056,7 @@
   "selected_node": "Node yang dipilih saat ini",
   "toggle_nodeselection_mode": "Beralih untuk beralih antara pemilihan node manual atau otomatis",
   "commitment_zero_balance": "Anda belum menambahkan komitmen",
-  "network": "Jaringan"
+  "network": "Jaringan",
+  "multiple_recipients": "Beberapa Penerima",
+  "self": "diri"
 }
