--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -70,7 +70,7 @@
   "answer": "回答",
   "answers": "回答",
   "application": "アプリケーション",
-  "arbitrary_message": "任意のメッセージ",
+  "arbitrary_message": "メッセージ",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "注文を依頼する",
   "ask_order_cancellation": "注文のキャンセルを依頼",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ が無効です。",
   "error_invalid_input": "入力が無効です。",
   "error_invalid_input_numbers": "入力が無効です。数字とドットだけが受け付けられます。",
-  "error_invalid_ordinary_payment": "無効な通常の支払い",
+  "error_invalid_ordinary_payment": "支払いが無効です。",
   "error_invalid_referenced_transaction_hash": "無効な参照先トランザクションハッシュ",
   "error_invalid_seller": "無効な売り手ID",
   "error_invalid_token": "トークンが 有効ではありません。__account_link__のアカウントのもののようです。それは __timestamp__ に生成されました。",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "選択肢の最小数",
   "more_info": "情報をもっと見る",
   "multi_out_payment": "マルチアウト支払い",
-  "multi_out_same_payment": "同額の支払い",
   "multiple_assets_differences": "複数の異なる資産を売却または購入、もしくはその両方をしました。",
   "my_assets": "自己資産",
   "my_completed_orders": "完了した自分の注文",
@@ -696,7 +695,7 @@
   "order_description": "注文の内容",
   "order_status": "注文のステータス",
   "order_total": "注文の合計",
-  "ordinary_payment": "通常の支払い",
+  "ordinary_payment": "支払い",
   "other": "その他",
   "page_header": "ページヘッダー",
   "parse_transaction": "トランザクションを解析",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "署名されたトランザクションのバイト",
   "smart_contract": "スマート契約",
   "smart_contract_creation": "スマート契約の作成",
-  "smart_contract_payment": "スマート契約の支払い",
+  "smart_contract_payment": "契約支払い",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "滑らかな曲線",
   "spend_all": "すべてを使う",
@@ -1038,7 +1037,7 @@
   "set_commitment": "コミットメントを設定する",
   "add_commitment": "コミットメントを追加",
   "revoke_commitment": "コミットメントを取り消す",
-  "reward_recipient_assignment": "報酬受領者の割り当て",
+  "reward_recipient_assignment": "報酬の割り当て",
   "mining": "鉱業",
   "applied_commitment": "適用されたコミットメント",
   "toggle_commitment_mode": "ここで、マイニングコミットメントの追加と取り消しを切り替えます",
@@ -1057,5 +1056,7 @@
   "selected_node": "現在選択されているノード",
   "toggle_nodeselection_mode": "手動または自動のノード選択を切り替えるために切り替えます",
   "commitment_zero_balance": "コミットメントはまだ追加されていません",
-  "network": "通信網"
+  "network": "通信網",
+  "multiple_recipients": "複数の受信者",
+  "self": "自己"
 }
