--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -70,7 +70,7 @@
   "answer": "Raspuns",
   "answers": "Răspunsuri",
   "application": "Aplicație",
-  "arbitrary_message": "Mesaj arbitrar",
+  "arbitrary_message": "Mesaj",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Cereți ordinul",
   "ask_order_cancellation": "Anulare Ordin Vânzare",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ nu este valid.",
   "error_invalid_input": "Intrare nevalidă.",
   "error_invalid_input_numbers": "Intrare nevalidă. Sunt acceptate doar numere şi un punct.",
-  "error_invalid_ordinary_payment": "Plată obişnuită nevalidă.",
+  "error_invalid_ordinary_payment": "Plată nevalidă.",
   "error_invalid_referenced_transaction_hash": "Hash-ul referențiat al tranzacție nevalid.",
   "error_invalid_seller": "ID vanzător nevalid",
   "error_invalid_token": "Token-ul nu este VALID. Se pare să aparţină contului __account_link__. Acesta a fost generat la __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Nr Minim Alegeri",
   "more_info": "Mai multe informaţii",
   "multi_out_payment": "Plata multiplă",
-  "multi_out_same_payment": "Plățile multiple pentru aceeași sumă",
   "multiple_assets_differences": "Mai multe active diferite au fost vândute și/sau cumpărate.",
   "my_assets": "Activele Mele",
   "my_completed_orders": "Tranzacțiile mele Efectuate",
@@ -696,7 +695,7 @@
   "order_description": "Descriere Ordin",
   "order_status": "Stadiu Ordin",
   "order_total": "Total Ordin(e)",
-  "ordinary_payment": "Plată Obişnuită",
+  "ordinary_payment": "Plată",
   "other": "Altele",
   "page_header": "Antet Pagină",
   "parse_transaction": "Analiză tranzacție",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Bytes-ii tranzacției semnalate",
   "smart_contract": "Contractul inteligent",
   "smart_contract_creation": "Crearea inteligentă a contractelor",
-  "smart_contract_payment": "Plata contractului inteligent",
+  "smart_contract_payment": "Plata contractului",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Smooth Curve",
   "spend_all": "Petrece totul",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Setați angajamentul",
   "add_commitment": "Adăugați angajament",
   "revoke_commitment": "Revocați angajamentul",
-  "reward_recipient_assignment": "Recompensarea atribuirii destinatarului",
+  "reward_recipient_assignment": "Atribuire recompensă",
   "mining": "Minerit",
   "applied_commitment": "Angajament aplicat",
   "toggle_commitment_mode": "Comutați aici între adăugarea și revocarea angajamentului minier",
@@ -1057,5 +1056,7 @@
   "selected_node": "Nodul selectat în prezent",
   "toggle_nodeselection_mode": "Comutați pentru a comuta între selecția manuală sau automată a nodului",
   "commitment_zero_balance": "Nu ați adăugat încă niciun angajament",
-  "network": "Reţea"
+  "network": "Reţea",
+  "multiple_recipients": "Destinatari multipli",
+  "self": "de sine"
 }
