--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -599,7 +599,6 @@
   "minimum_nr_choices": "Minimalan broj pokušaja",
   "more_info": "Opširnije",
   "multi_out_payment": "Multi Out Plaćanje",
-  "multi_out_same_payment": "Multi Out Same isplata iznosa",
   "multiple_assets_differences": "Više različitih asseta je prodano i/ili kupljeno.",
   "my_assets": "Moji asseti",
   "my_completed_orders": "Moje izvršene narudžbe",
@@ -1055,5 +1054,7 @@
   "node_successfully_connected": "",
   "selected_node": "",
   "toggle_nodeselection_mode": "",
-  "commitment_zero_balance": ""
+  "commitment_zero_balance": "",
+  "multiple_recipients": "",
+  "self": ""
 }
