--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -70,7 +70,7 @@
   "answer": "Odpoveď",
   "answers": "Odpovede",
   "application": "Aplikácia",
-  "arbitrary_message": "Ľubovoľná správa",
+  "arbitrary_message": "Správa",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Požiadať o objednávku",
   "ask_order_cancellation": "Zrušenie predajného príkazu",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ je neplatné.",
   "error_invalid_input": "Neplatný vstup.",
   "error_invalid_input_numbers": "Neplatný vstup. Povolené sú iba číslice a bodky.",
-  "error_invalid_ordinary_payment": "Neplatná platba.",
+  "error_invalid_ordinary_payment": "Neplatná platba",
   "error_invalid_referenced_transaction_hash": "Neplatný hash odkazovanej transakcie.",
   "error_invalid_seller": "Neplatné ID predávajúceho",
   "error_invalid_token": "Token je NEPLATNÝ. Zdá sa, patrí k účtu __account_link__. Bol vytvorený __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Minimálny počet možností",
   "more_info": "Viac Info",
   "multi_out_payment": "Platba Multi Out",
-  "multi_out_same_payment": "Multi Out Rovnaká čiastka Platba",
   "multiple_assets_differences": "Viaceré rôzne majetky boli predané a/alebo zakúpené.",
   "my_assets": "Môj majetok",
   "my_completed_orders": "Moje ukončené príkazy",
@@ -696,7 +695,7 @@
   "order_description": "Popis príkazu",
   "order_status": "Stav objednávky",
   "order_total": "Objednávka celkom",
-  "ordinary_payment": "Bežná platba",
+  "ordinary_payment": "Platba",
   "other": "Ostatné",
   "page_header": "Hlavička strany",
   "parse_transaction": "Spracovať transakciu",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Podpísané bajty transakcií",
   "smart_contract": "Inteligentná zmluva",
   "smart_contract_creation": "Vytvorenie inteligentnej zmluvy",
-  "smart_contract_payment": "Platba inteligentnej zmluvy",
+  "smart_contract_payment": "Platba zmluvy",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Hladká krivka",
   "spend_all": "Stráviť všetko",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Stanoviť záväzok",
   "add_commitment": "Pridajte záväzok",
   "revoke_commitment": "Odvolať záväzok",
-  "reward_recipient_assignment": "Odmena Priradenie príjemcu",
+  "reward_recipient_assignment": "Odmena za pridelenie",
   "mining": "Ťažba",
   "applied_commitment": "Uplatnený záväzok",
   "toggle_commitment_mode": "Tu prepnite medzi pridaním a odvolaním záväzku ťažby",
@@ -1057,5 +1056,7 @@
   "selected_node": "Aktuálne vybraný uzol",
   "toggle_nodeselection_mode": "Prepínaním prepínate medzi manuálnym alebo automatickým výberom uzla",
   "commitment_zero_balance": "Zatiaľ nemáte pridaný žiadny záväzok",
-  "network": "Sieť"
+  "network": "Sieť",
+  "multiple_recipients": "Viac príjemcov",
+  "self": "ja"
 }
