--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -70,7 +70,7 @@
   "answer": "Odgovor",
   "answers": "Odgovori",
   "application": "Aplikacija",
-  "arbitrary_message": "Proizvoljna Poruka",
+  "arbitrary_message": "Порука",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Tražite Porudžbinu",
   "ask_order_cancellation": "Otkažite  Porudžbinu",
@@ -379,7 +379,7 @@
   "error_invalid_field": "__field__ nije validno.",
   "error_invalid_input": "Netačan unos.",
   "error_invalid_input_numbers": "Neispravan unos. Dozvoljeni znakovi su samo brojevi i tačka.",
-  "error_invalid_ordinary_payment": "Netačna uplata.",
+  "error_invalid_ordinary_payment": "Неисправно плаћање.",
   "error_invalid_referenced_transaction_hash": "Netačan hash referentne transakcije.",
   "error_invalid_seller": "Netačan ID Prodavca",
   "error_invalid_token": "Token NIJE VAŽEĆI</strong>. Čini se da pripada nalogu __account_link__. Vrijeme generisanja: __timestamp__.",
@@ -611,7 +611,6 @@
   "minimum_nr_choices": "Minimalan Broj Izbora",
   "more_info": "Više Informacija",
   "multi_out_payment": "Мулти исплата",
-  "multi_out_same_payment": "Вишеструка исплата по истом износу",
   "multiple_assets_differences": "Više različitih asseta je prodano i/ili kupljeno.",
   "my_assets": "Moji Asset-i",
   "my_completed_orders": "Moje Izvršene Porudžbine",
@@ -709,7 +708,7 @@
   "order_description": "Opis Porudžbine",
   "order_status": "Status Porudžbine",
   "order_total": "Ukupna Porudžbina",
-  "ordinary_payment": "Obična Uplata",
+  "ordinary_payment": "Плаћање",
   "other": "Ostali",
   "page_header": "Zaglavlje Stranice",
   "parse_transaction": "Raščlani Transakciju",
@@ -865,7 +864,7 @@
   "signed_transaction_bytes": "Potpisana Transakcija Bytes",
   "smart_contract": "Смарт Цонтрацт",
   "smart_contract_creation": "Паметно креирање уговора",
-  "smart_contract_payment": "Плаћање Смарт уговора",
+  "smart_contract_payment": "Плаћање по уговору",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Смоотх Цурве",
   "spend_all": "Потрошите све",
@@ -1053,7 +1052,7 @@
   "set_commitment": "Поставите обавезу",
   "add_commitment": "Додајте обавезу",
   "revoke_commitment": "Опозови обавезу",
-  "reward_recipient_assignment": "Додељивање награде добитнику",
+  "reward_recipient_assignment": "Додељивање награде",
   "mining": "Рударство",
   "applied_commitment": "Примењена обавеза",
   "toggle_commitment_mode": "Овде се пребацујте између додавања и опозивања рударске обавезе",
@@ -1071,5 +1070,7 @@
   "node_successfully_connected": "Успешно повезан са чвором",
   "selected_node": "Тренутно изабрани чвор",
   "toggle_nodeselection_mode": "Пребаците за пребацивање између ручног или аутоматског избора чвора",
-  "commitment_zero_balance": "Још увек нисте додали обавезу"
+  "commitment_zero_balance": "Још увек нисте додали обавезу",
+  "multiple_recipients": "Више прималаца",
+  "self": "себе"
 }
