--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -70,7 +70,7 @@
   "answer": "Cevap ver",
   "answers": "Cevaplar",
   "application": "Uygulama",
-  "arbitrary_message": "Rasgele Mesaj",
+  "arbitrary_message": "İleti",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Sipariş sor",
   "ask_order_cancellation": "Sipariş iptali isteyin",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ geçersiz.",
   "error_invalid_input": "Geçersiz bilgi girişi.",
   "error_invalid_input_numbers": "Geçersiz bilgi . Yalnızca sayı ve nokta kabul edilir.",
-  "error_invalid_ordinary_payment": "Sıradan ödeme geçersiz.",
+  "error_invalid_ordinary_payment": "Geçersiz ödeme.",
   "error_invalid_referenced_transaction_hash": "Invalid referenced transaction hash.",
   "error_invalid_seller": "Geçersiz satıcı kimliği (seller ID)",
   "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Minimum Nr Of Choices",
   "more_info": "More Info",
   "multi_out_payment": "Çoklu Ödeme",
-  "multi_out_same_payment": "Çoklu Ödeme Aynı Miktarda Ödeme",
   "multiple_assets_differences": "Multiple different assets have been sold and/or bought.",
   "my_assets": "My Assets",
   "my_completed_orders": "My Completed Orders",
@@ -696,7 +695,7 @@
   "order_description": "Sipariş açıklaması",
   "order_status": "Sipariş durumu",
   "order_total": "Toplam siparişler",
-  "ordinary_payment": "Sıradan ödeme",
+  "ordinary_payment": "Ödeme",
   "other": "Diğer",
   "page_header": "Sayfa üstbilgisi",
   "parse_transaction": "İşlem ayrıştırma",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Signed Transaction Bytes",
   "smart_contract": "Akıllı Sözleşme",
   "smart_contract_creation": "Akıllı Sözleşme Oluşturma",
-  "smart_contract_payment": "Akıllı Sözleşme Ödemesi",
+  "smart_contract_payment": "Sözleşme Ödemesi",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Yumuşak kavis",
   "spend_all": "Herşeyi harcamak",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Taahhüdü Ayarla",
   "add_commitment": "Taahhüt Ekle",
   "revoke_commitment": "Taahhüdü İptal Et",
-  "reward_recipient_assignment": "Ödül Alıcı Ataması",
+  "reward_recipient_assignment": "Ödül Atama",
   "mining": "Madencilik",
   "applied_commitment": "Uygulamalı Taahhüt",
   "toggle_commitment_mode": "Madencilik taahhüdünü ekleme ve iptal etme arasında buradan geçiş yapın",
@@ -1057,5 +1056,7 @@
   "selected_node": "Şu anda seçili düğüm",
   "toggle_nodeselection_mode": "Manuel veya otomatik düğüm seçimi arasında geçiş yapmak için geçiş yapın",
   "commitment_zero_balance": "Henüz taahhüt eklemediniz",
-  "network": "Ağ"
+  "network": "Ağ",
+  "multiple_recipients": "Birden Fazla Alıcı",
+  "self": "kendini"
 }
