--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -70,7 +70,7 @@
   "answer": "答案",
   "answers": "答案",
   "application": "应用程序",
-  "arbitrary_message": "任意信息",
+  "arbitrary_message": "信息",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "询问订单",
   "ask_order_cancellation": "卖单取消",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ 是无效的。",
   "error_invalid_input": "无效的输入。",
   "error_invalid_input_numbers": "无效的输入。只接受数字和点。",
-  "error_invalid_ordinary_payment": "无效的普通支付。",
+  "error_invalid_ordinary_payment": "付款无效。",
   "error_invalid_referenced_transaction_hash": "无效的参考交易哈希。",
   "error_invalid_seller": "无效的卖方 ID",
   "error_invalid_token": "令牌是 无效的 。它属于帐户 __account_link__。它的生成时间是 __timestamp__ 。",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "选择的最小数目",
   "more_info": "更多信息",
   "multi_out_payment": "多付款",
-  "multi_out_same_payment": "多出相同金额付款",
   "multiple_assets_differences": "多个不同的资产已经被出售或购买。",
   "my_assets": "我的资产",
   "my_completed_orders": "我的已完成订单",
@@ -696,7 +695,7 @@
   "order_description": "订单描述",
   "order_status": "订单状态",
   "order_total": "订单合计",
-  "ordinary_payment": "普通支付",
+  "ordinary_payment": "支付",
   "other": "其它",
   "page_header": "页眉",
   "parse_transaction": "解析交易",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "已签名的交易字节",
   "smart_contract": "智能合约",
   "smart_contract_creation": "智能合约创建",
-  "smart_contract_payment": "支付智能合约",
+  "smart_contract_payment": "合约付款",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "平滑曲线",
   "spend_all": "花一切",
@@ -1038,7 +1037,7 @@
   "set_commitment": "设定承诺",
   "add_commitment": "增加承诺",
   "revoke_commitment": "撤销承诺",
-  "reward_recipient_assignment": "奖励收件人分配",
+  "reward_recipient_assignment": "奖励分配",
   "mining": "矿业",
   "applied_commitment": "应用承诺",
   "toggle_commitment_mode": "在添加和撤销采矿承诺之间切换",
@@ -1057,5 +1056,7 @@
   "selected_node": "当前选择的节点",
   "toggle_nodeselection_mode": "切换以在手动或自动节点选择之间切换",
   "commitment_zero_balance": "您尚未添加任何承诺",
-  "network": "网络"
+  "network": "网络",
+  "multiple_recipients": "多个收件人",
+  "self": "自己"
 }
