--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -70,7 +70,7 @@
   "answer": "Odgovor",
   "answers": "Odgovori",
   "application": "Aplikacija",
-  "arbitrary_message": "Proizvoljna poruka",
+  "arbitrary_message": "Poruka",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Pitajte red",
   "ask_order_cancellation": "Otkazivanje prodajnog naloga",
@@ -378,7 +378,7 @@
   "error_invalid_field": "__field__ je pogrešan.",
   "error_invalid_input": "Pogrešan unos.",
   "error_invalid_input_numbers": "Neispravan unos. Dozvoljeni znakovi samo su brojevi i točka.",
-  "error_invalid_ordinary_payment": "Netočna uplata.",
+  "error_invalid_ordinary_payment": "Neispravno plaćanje.",
   "error_invalid_referenced_transaction_hash": "Netočan hash referentne transakcije.",
   "error_invalid_seller": "Netočan ID prodavatelja",
   "error_invalid_token": "Token NIJE VAŽEĆI. Čini se da pripada računu account __account_link__. Vrijeme generiranja: __timestamp__.",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Minimalan broj pokušaja",
   "more_info": "Opširnije",
   "multi_out_payment": "Multi Out Plaćanje",
-  "multi_out_same_payment": "Multi Out Jednako plaćanje iznosa",
   "multiple_assets_differences": "Više različitih asseta je prodano i/ili kupljeno.",
   "my_assets": "Moji asseti",
   "my_completed_orders": "Moje izvršene narudžbe",
@@ -696,7 +695,7 @@
   "order_description": "Opis naloga",
   "order_status": "Status naloga",
   "order_total": "Ukupna Narudžba",
-  "ordinary_payment": "Klasična uplata",
+  "ordinary_payment": "Plaćanje",
   "other": "Ostali",
   "page_header": "Zaglavlje stranice",
   "parse_transaction": "Raščlani transakciju",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Potpisana transakcija Bytes",
   "smart_contract": "Pametni ugovor",
   "smart_contract_creation": "Stvaranje pametnog ugovora",
-  "smart_contract_payment": "Plaćanje pametnog ugovora",
+  "smart_contract_payment": "Ugovorno plaćanje",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Glatka krivulja",
   "spend_all": "Provedite sve",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Postavite predanost",
   "add_commitment": "Dodaj obvezu",
   "revoke_commitment": "Opozovi obvezu",
-  "reward_recipient_assignment": "Dodjela primatelja nagrade",
+  "reward_recipient_assignment": "Dodjela nagrade",
   "mining": "Rudarstvo",
   "applied_commitment": "Primijenjena predanost",
   "toggle_commitment_mode": "Ovdje se prebacujte između dodavanja i opoziva rudarske obveze",
@@ -1057,5 +1056,7 @@
   "selected_node": "Trenutno odabrani čvor",
   "toggle_nodeselection_mode": "Prebacite za prebacivanje između ručnog ili automatskog odabira čvora",
   "commitment_zero_balance": "Još niste dodali obvezu",
-  "network": "Mreža"
+  "network": "Mreža",
+  "multiple_recipients": "Više primatelja",
+  "self": "sebe"
 }
