--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -70,7 +70,7 @@
   "answer": "Відповідь",
   "answers": "Відповіді",
   "application": "Додаток",
-  "arbitrary_message": "Довільні повідомлення",
+  "arbitrary_message": "повідомлення",
   "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Запитайте замовлення",
   "ask_order_cancellation": "Відмінити ордер на купівлю",
@@ -600,7 +600,6 @@
   "minimum_nr_choices": "Мінімальна кількість варіантів",
   "more_info": "Детальніше",
   "multi_out_payment": "Multi Out Оплата",
-  "multi_out_same_payment": "Багаторазове ж оплата суми",
   "multiple_assets_differences": "Декілька різних активів було продано або куплено.",
   "my_assets": "Мої активи",
   "my_completed_orders": "Мої завершені замовлення",
@@ -696,7 +695,7 @@
   "order_description": "Опис ордера",
   "order_status": "Статус замовлення",
   "order_total": "Загальна сума замовлення",
-  "ordinary_payment": "Звичайний платіж",
+  "ordinary_payment": "Оплата",
   "other": "Інші",
   "page_header": "Верхній колонтитул сторінки",
   "parse_transaction": "Розбір транзакції",
@@ -850,7 +849,7 @@
   "signed_transaction_bytes": "Підписані байти транзакції",
   "smart_contract": "Розумний контракт",
   "smart_contract_creation": "Створення смарт-контракту",
-  "smart_contract_payment": "Оплата смарт-контракту",
+  "smart_contract_payment": "Виплата за контрактом",
   "smart_contracts": "Smart Contracts",
   "smooth_curve": "Плавна крива",
   "spend_all": "Проведіть все",
@@ -1038,7 +1037,7 @@
   "set_commitment": "Встановіть зобов'язання",
   "add_commitment": "Додати зобов’язання",
   "revoke_commitment": "Відкликати зобов'язання",
-  "reward_recipient_assignment": "Призначення отримувача винагороди",
+  "reward_recipient_assignment": "Призначення винагороди",
   "mining": "Видобуток корисних копалин",
   "applied_commitment": "Застосовувані зобов’язання",
   "toggle_commitment_mode": "Переключіться тут між додаванням та скасуванням зобов’язання щодо майнінгу",
@@ -1057,5 +1056,7 @@
   "selected_node": "Наразі вибраний вузол",
   "toggle_nodeselection_mode": "Перемикайте, щоб перемикатися між ручним або автоматичним вибором вузлів",
   "commitment_zero_balance": "Ви ще не додали жодного зобов’язання",
-  "network": "Мережа"
+  "network": "Мережа",
+  "multiple_recipients": "Кілька одержувачів",
+  "self": "себе"
 }
